# fancheng

./: Cargo.toml
.history/: Cargo_20250109164711.toml  Cargo_20250109181845.toml  Cargo_20250109181850.toml  Cargo_20250109181852.toml  Cargo_20250113140720.toml
.history/src/: lib_20250109181801.rs  lib_20250109181806.rs  lib_20250109181807.rs  lib_20250109181918.rs  lib_20250109181919.rs  lib_20250109182159.rs  lib_20250109182211.rs  lib_20250109182324.rs  lib_20250109182329.rs  lib_20250109182330.rs
.history/src/core/: entity_20250109182441.rs  entity_20250109223411.rs  entity_20250112142757.rs  entity_20250112142800.rs  entity_20250112162117.rs  entity_20250112162330.rs  entity_20250112162343.rs  mod_20250109181935.rs  mod_20250109181937.rs  mod_20250109182440.rs  mod_20250109182441.rs  mod_20250112162109.rs
src/: error.rs  lib.rs
src/contract/: base.rs  mod.rs  typical.rs
src/contract/intent/: content.rs  declaration.rs  mod.rs
src/contract/types/: atypical.rs  mod.rs  sale.rs
src/core/: mod.rs
src/core/entity/: base.rs  legal_person.rs  mod.rs  natural_person.rs  unincorporated.rs
