[package]
name = "fancheng"
version = "0.1.0"
edition = "2021"
authors = ["Kawaro <wkawaro@gmail.com>", "zsy <rachioff08@gmail.com>"]
description = "A framework for legal norm programming"
license = "MIT"

[dependencies]
chrono = "0.4"
uuid = { version = "1.4", features = ["v4", "fast-rng", "macro-diagnostics"] }
parking_lot = "0.12"
rust_decimal = "1.0"